add page catalog

--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -26,3 +26,5 @@
 @import '../blocks/subscribe/subscribe'
 @import '../blocks/address/address'
 @import '../blocks/copyright/copyright'
+@import '../blocks/catalog/catalog'
+@import '../blocks/sort/sort'
