--- a/app/styles/utils/vars.sass
+++ b/app/styles/utils/vars.sass
@@ -3,6 +3,7 @@ $o: 'Open Sans', sans-serif
 $r: 'Roboto', sans-serif
 
 $bg: #f9f9f9
+$border: #dfdfdf
 $light-gray: #e4e4e4
 $gray: #929292
 $dark-gray: #7c7a7a
