--- a/app/templates/utils/blocks.pug
+++ b/app/templates/utils/blocks.pug
@@ -20,3 +20,5 @@ include ../../blocks/email/email
 include ../../blocks/subscribe/subscribe
 include ../../blocks/address/address
 include ../../blocks/copyright/copyright
+include ../../blocks/catalog/catalog
+include ../../blocks/sort/sort
