add sign-in page

--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -28,3 +28,5 @@
 @import '../blocks/copyright/copyright'
 @import '../blocks/catalog/catalog'
 @import '../blocks/sort/sort'
+@import '../blocks/sign-in/sign-in'
+@import '../blocks/checkbox/checkbox'
