--- a/app/templates/utils/blocks.pug
+++ b/app/templates/utils/blocks.pug
@@ -22,3 +22,5 @@ include ../../blocks/address/address
 include ../../blocks/copyright/copyright
 include ../../blocks/catalog/catalog
 include ../../blocks/sort/sort
+include ../../blocks/sign-in/sign-in
+include ../../blocks/checkbox/checkbox
