--- a/app/styles/utils/common.sass
+++ b/app/styles/utils/common.sass
@@ -1,4 +1,10 @@
+html
+    height: 100%
+
 body
+    display: flex
+    flex-direction: column
+    height: 100%
     font-family: $o
     font-size: 14px
     font-weight: 400
