--- a/app/templates/catalog.pug
+++ b/app/templates/catalog.pug
@@ -2,7 +2,7 @@ extends layouts/default
 block title
     title Easy Gaming
 block link
-    link(rel="stylesheet" href="assets/styles/index.css")
+    link(rel="stylesheet" href="assets/styles/index.min.css")
 block body
     +header()
     main.main
@@ -10,4 +10,4 @@ block body
         +catalog()
     +footer()
 block script
-    script(src="assets/scripts/index.js")
+    script(src="assets/scripts/index.min.js")
