--- a/app/templates/index.pug
+++ b/app/templates/index.pug
@@ -3,7 +3,7 @@ block title
     title Easy Gaming
 block link
     link(rel="stylesheet" href="assets/styles/libs/jquery.bxslider.min.css")
-    link(rel="stylesheet" href="assets/styles/index.css")
+    link(rel="stylesheet" href="assets/styles/index.min.css")
 block body
     +header()
     main.main
@@ -15,4 +15,4 @@ block body
     +footer()
 block script
     script(src="assets/scripts/libs/jquery.bxslider.min.js")
-    script(src="assets/scripts/index.js")
+    script(src="assets/scripts/index.min.js")
