--- a/app/templates/sign-in.pug
+++ b/app/templates/sign-in.pug
@@ -2,11 +2,11 @@ extends layouts/default
 block title
     title Easy Gaming
 block link
-    link(rel="stylesheet" href="assets/styles/index.css")
+    link(rel="stylesheet" href="assets/styles/index.min.css")
 block body
     +header()
     main.main
         +sign-in()
     +footer()
 block script
-    script(src="assets/scripts/index.js")
+    script(src="assets/scripts/index.min.js")
